@@ -1,0 +1,12 @@
+\begin{table}
+\centering
+\caption{This is a test caption.}
+\begin{tabular}{cccc}
+H1 & H2 & H3 & H4\\
+0.000 & 1.000 & 2.000 & 3.000\\
+4.000 & 5.000 & 6.000 & 7.000\\
+8.000 & 9.000 & 10.000 & 11.000\\
+12.000 & 13.000 & 14.000 & 15.000\\
+16.000 & 17.000 & 18.000 & 19.000\\
+\end{tabular}
+\end{table}
